<resources>
    <string name="app_name">BrownEC</string>
    <string name="sign_up">注册</string>
    <string name="sign_up_name">用户名</string>
    <string name="sign_up_email">邮箱</string>
    <string name="sign_up_phone">手机</string>
    <string name="sign_up_password">密码</string>
    <string name="sign_up_repassword">确认密码</string>
    <string name="sign_up_to_sign_in">已经注册了？请登录</string>

    <string name="sign_in">登录</string>
    <string name="sign_in_to_sign_up">还没有账户？现在注册吧</string>
    <string name="sign_in_third_party">第三方账号快捷登录</string>
    <string name="sign_in_wechat">{fa-weixin}</string>

    <string name="index_scan">{fa-qrcode}</string>
    <string name="index_search">搜索</string>
    <string name="index_message">{fa-commenting}</string>

    <string name="sort_title">分类</string>
    <string name="sort_content_more">more ></string>

    <string name="publish_title">发布</string>
    <string name="publish_confirm">确认发布</string>
    <string name="publish_brand">商品标题/品牌型号</string>
    <string name="publish_info">商品简介</string>
    <string name="publish_rent_text">租金:</string>
    <string name="publish_rent_num">0.00</string>
    <string name="publish_rent_unit">元/天</string>
    <string name="publish_guarantee_text">押金:</string>
    <string name="publish_guarantee_unit">元</string>
    <string name="publish_count_text">数量:</string>
    <string name="publish_class_text">类目:</string>
    <string name="publish_class_hint">请选择所属类目</string>

    <string name="cart_clear">清空</string>
    <string name="cart_refresh">{fa-refresh}</string>
    <string name="cart_title">购物车</string>
    <string name="cart_delete">删除</string>
    <string name="cart_check_circle">{fa-check-circle}</string>
    <string name="cart_select_all">全选</string>
    <string name="cart_total">合计: </string>
    <string name="cart_example_number">￥0.01</string>
    <string name="cart_settle_account">结算</string>
    <string name="cart_stub">购物车竟然是空的</string>

    <string name="cartItem_example_title">商品标题</string>
    <string name="cartItem_example_description">商品描述</string>
    <string name="cartItem_example_price">￥2.00</string>
    <string name="cartItem_minus">{fa-minus-square-o}</string>
    <string name="cartItem_plus">{fa-plus-square-o}</string>
    <string name="cartItem_example_count">1</string>

    <string name="pay_alipay">{icon-ali-pay}</string>
    <string name="pay_cancel">取消支付</string>

    <string name="personal_example_name">糖宝</string>
    <string name="personal_icon_money">{fa-money}</string>
    <string name="personal_example_money">10000</string>
    <string name="personal_my_order">我的订单</string>
    <string name="personal_all_order">全部订单</string>
    <string name="personal_chevron_right">{fa-chevron-right}</string>
    <string name="personal_my_goods">我的发布</string>
    <string name="personal_all_goods">全部发布</string>
    <string name="personal_my_rent">我的出租</string>
    <string name="personal_all_rent">全部出租</string>
    <string name="personal_pay">{fa-credit-card}</string>
    <string name="personal_receive">{fa-truck}</string>
    <string name="personal_evaluate">{fa-clone}</string>
    <string name="personal_after_market">{fa-comments-o}</string>
    <string name="personal_pay_text">待付款</string>
    <string name="personal_receive_text">待收货</string>
    <string name="personal_evaluate_text">待评价</string>
    <string name="personal_after_market_text">售后</string>
    <string name="personal_unset">未设置</string>

    <string name="personal_orderList_title">title</string>
    <string name="personal_orderList_price">price</string>
    <string name="personal_orderList_time">time</string>
    <string name="personal_orderList">订单列表</string>
    <string name="personal_publishList">发布列表</string>
    <string name="personal_rentList">出租列表</string>
    <string name="personal_orderList_comment">评价晒单</string>
    <string name="personal_profile">个人信息</string>
    <string name="personal_name">姓名</string>
    <string name="personal_confirm">提交</string>
    <string name="personal_phone">电话</string>
    <string name="personal_delete">删除</string>

    <string name="personal_address">地址管理</string>
    <string name="personal_address_plus">{fa-plus-square-o}</string>
    <string name="personal_settings">设置</string>
    <string name="personal_about">App简介</string>

    <string name="goods_detail">商品详情</string>
    <string name="goods_detail_favor">{fa-heart-o}</string>
    <string name="goods_detail_cart">{fa-shopping-cart}</string>
    <string name="goods_detail_add_cart">加入购物车</string>
    <string name="goods_detail_chevron_left">{fa-chevron-left}</string>
    <string name="goods_detail_price_icon">￥</string>

    <string name="order_comment_mark">评分</string>
    <string name="order_comment_text">写下评论</string>

    <string name="recharge_title">代币充值</string>
    <string name="recharge_current_text">当前余额</string>
    <string name="recharge_current_example">100 元</string>
    <string name="recharge_100">100 代币</string>
    <string name="recharge_500">500 代币</string>
    <string name="recharge_1000">1000 代币</string>
    <string name="recharge_diy">其他数额</string>
    <string name="recharge_num_example">0</string>
    <string name="recharge_unit">元</string>
    <string name="recharge_button">充值</string>
</resources>
