<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_publish_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:text="@string/cart_clear"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/publish_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_publish_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/publish_confirm"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_good_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:hint="@string/publish_brand"
        android:singleLine="true"
        android:textColor="@color/we_chat_black"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_good_desc"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="start|top"
        android:hint="@string/publish_info"
        android:textColor="@color/we_chat_black"
        android:textSize="18sp" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/publish_rent_text"
            android:textColor="@color/we_chat_black"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_good_rent_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/publish_rent_num"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/app_main"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/publish_rent_unit"
            android:textColor="@color/we_chat_black"
            android:textSize="20sp" />


    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/publish_guarantee_text"
            android:textColor="@color/we_chat_black"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_good_guarantee_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/publish_rent_num"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/app_main"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/publish_guarantee_unit"
            android:textColor="@color/we_chat_black"
            android:textSize="20sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/publish_count_text"
            android:textColor="@color/we_chat_black"
            android:textSize="20sp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_count_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cartItem_minus"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_count_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/cartItem_example_count"
            android:textColor="@color/app_main"
            android:textSize="20sp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_count_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cartItem_plus"
            android:textSize="24sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/publish_class_text"
            android:textColor="@color/we_chat_black"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_good_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_class_hint"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <com.tony.brown.ui.widget.AutoPhotoLayout
            android:id="@+id/ap_good_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon_size="10sp"
            app:item_margin="3"
            app:line_count="5"
            app:max_count="5" />

    </android.support.v7.widget.LinearLayoutCompat>


</LinearLayout>