<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/btn_dialog_pay_alpay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pay_alipay"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="50sp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/btn_dialog_pay_wechat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_in_wechat"
            android:textColor="@color/we_chat_green"
            android:textSize="50sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_dialog_pay_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/app_main"
        android:gravity="center"
        android:text="@string/pay_cancel"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>